burger menu overflow fix

--- a/src/app/burger-menu/burger-menu.component.scss
+++ b/src/app/burger-menu/burger-menu.component.scss
@@ -5,6 +5,7 @@
   background-color: #141d2f83;
   z-index: 99;
   animation: moveRight 0.25s ease-in-out;
+  overflow: hidden;
 }
 
 .burger-menu-links {
